// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BField.vue adds the additional classes to its "label" based on the "extraLabelClasses" prop 1`] = `
<div
  class="mb-2"
>
  <label
    class="myExtraClass block mb-2 text-lg font-bold text-blue"
  >
    
      label
    
  </label>
   
  <!---->
   
  <!---->
</div>
`;

exports[`BField.vue adds the correct "for" attribute to its label based on the "labelFor" prop 1`] = `
<div
  class="mb-2"
>
  <label
    class="block mb-2 text-lg font-bold text-blue"
    for="myInput"
  >
    
      label
    
  </label>
   
  <!---->
   
  <!---->
</div>
`;

exports[`BField.vue renders the <label> with the correct classes 1`] = `
<div
  class="mb-2"
>
  <label
    class="block mb-2 text-lg font-bold text-blue"
  >
    
      label
    
  </label>
   
  <!---->
   
  <!---->
</div>
`;

exports[`BField.vue renders the content of its "label" slot if provided 1`] = `
<div
  class="mb-2"
>
  <span>
    labelSlot
  </span>
   
  <!---->
   
  <!---->
</div>
`;

exports[`BField.vue renders the content of its "message" slot if provided 1`] = `
<div
  class="mb-2"
>
  <!---->
   
  <!---->
   
  <span>
    messageSlot
  </span>
</div>
`;

exports[`BField.vue renders the message with the correct classes based on the "status" prop 1`] = `
<div
  class="mb-2"
>
  <!---->
   
  <!---->
   
  <span
    class="mt-1 text-blue"
  >
    
      success
    
  </span>
</div>
`;

exports[`BField.vue renders the message with the correct classes based on the "status" prop 2`] = `
<div
  class="mb-2"
>
  <!---->
   
  <!---->
   
  <span
    class="mt-1 text-orange"
  >
    
      warning
    
  </span>
</div>
`;

exports[`BField.vue renders the message with the correct classes based on the "status" prop 3`] = `
<div
  class="mb-2"
>
  <!---->
   
  <!---->
   
  <span
    class="mt-1 text-red"
  >
    
      error
    
  </span>
</div>
`;

exports[`BField.vue renders the message with the correct classes based on the "status" prop 4`] = `
<div
  class="mb-2"
>
  <!---->
   
  <!---->
   
  <span
    class="mt-1 text-green"
  >
    
      success
    
  </span>
</div>
`;

exports[`BField.vue renders the message with the correct classes based on the "status" prop 5`] = `
<div
  class="mb-2"
>
  <!---->
   
  <!---->
   
  <span
    class="mt-1 text-blue"
  >
    
      default
    
  </span>
</div>
`;

exports[`BField.vue renders with the correct classes on its label based on the "status" prop 1`] = `
<div
  class="mb-2"
>
  <label
    class="block mb-2 text-lg font-bold text-blue"
  >
    
      success
    
  </label>
   
  <!---->
   
  <!---->
</div>
`;

exports[`BField.vue renders with the correct classes on its label based on the "status" prop 2`] = `
<div
  class="mb-2"
>
  <label
    class="block mb-2 text-lg font-bold text-orange"
  >
    
      warning
    
  </label>
   
  <!---->
   
  <!---->
</div>
`;

exports[`BField.vue renders with the correct classes on its label based on the "status" prop 3`] = `
<div
  class="mb-2"
>
  <label
    class="block mb-2 text-lg font-bold text-red"
  >
    
      error
    
  </label>
   
  <!---->
   
  <!---->
</div>
`;

exports[`BField.vue renders with the correct classes on its label based on the "status" prop 4`] = `
<div
  class="mb-2"
>
  <label
    class="block mb-2 text-lg font-bold text-green"
  >
    
      success
    
  </label>
   
  <!---->
   
  <!---->
</div>
`;

exports[`BField.vue renders with the correct classes on its label based on the "status" prop 5`] = `
<div
  class="mb-2"
>
  <label
    class="block mb-2 text-lg font-bold text-blue"
  >
    
      default
    
  </label>
   
  <!---->
   
  <!---->
</div>
`;
